syntax = "proto3";

option java_package = "com.example.refactortask.grpc";
option java_outer_classname = "CategoryProto";

package com.example.refactortask;

service CategoryGrpcService {
  rpc FetchCategory(FetchCategoryRequest) returns (CategoryData);
  rpc GetAllCategories(Empty) returns (CategoriesList);
  rpc AddCategory(AddCategoryRequest) returns (CategoryData);
  rpc ModifyCategory(ModifyCategoryRequest) returns (CategoryData);
  rpc RemoveCategory(RemoveCategoryRequest) returns (RemoveResponse);
  rpc FindCategoryByName(FindByNameRequest) returns (CategoryData);
}

message FetchCategoryRequest {

  int64 category_id = 1;
}


message Empty {

}

message AddCategoryRequest {
  string name = 1;
  string description = 2;
}

message ModifyCategoryRequest {
  int64 category_id = 1;
  string name = 2;
  string description = 3;
}


message RemoveCategoryRequest {
  int64 category_id = 1;
}


message FindByNameRequest {
  string name = 1;
}

message CategoryData {
  int64 category_id = 1;
  string name = 2;
  string description = 3;
  repeated int64 product_ids = 4;
}

message CategoriesList {
  repeated CategoryData categories = 1;
}

message RemoveResponse {
  bool success = 1;
  string error_message = 2;
}